--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,6 +10,9 @@ ENV PYTHONUNBUFFERED 1
 ENV FLASK_ENV production
 ENV APP_SETTINGS src.config.ProductionConfig
 
+ARG SECRET_KEY
+ENV SECRET_KEY $SECRET_KEY
+
 # install system dependencies
 RUN apt-get update \
   && apt-get -y install netcat gcc postgresql \
